ul li spacing fixes
- Increased margin to 30px 0
- Removed padding-bottom for #app ul li:last-child

--- a/css/default.css
+++ b/css/default.css
@@ -73,7 +73,11 @@ h1 {
 
 #app ul li {
     line-height: 38px;
-    margin: 10px 0;
+    margin: 30px 0;
+}
+
+#app ul li:last-child {
+    margin: 30px 0 0 0;
 }
 
 #app img {
